--- a/web templates/My web project/p.w3layouts.com/demos_new/template_demo/03-09-2018/arable_demo_Free/1791219992/web/about.html
+++ b/web templates/My web project/p.w3layouts.com/demos_new/template_demo/03-09-2018/arable_demo_Free/1791219992/web/about.html
@@ -59,6 +59,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 </div>
                                 <div class="land-content">
                                     <h4>The Best Landscaping</h4>
+                                    <p>get it from shalley</p>
 
                                 </div>
 
